# mdscaffold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  noxfile.py  pixi.toml  pyproject.toml
docs/api/: cli.md  core.md
notebooks/: README.md
src/mdscaffold/: __init__.py  main.py
src/mdscaffold/core/: __init__.py  config.py
src/mdscaffold/core/project/: __init__.py  config.py
tests/: __init__.py  test_init.py  test_main.py
tests/core/: __init__.py
tests/core/project/: __init__.py  test_config.py
